setup index and application template

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+<div class="container">
+  <div class="header">
+    <h2>Karuna's Tiny Trello</h2>
+  </div>
+  <div class="body">
+    {{outlet}}
+  </div>
+</div>
