--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,5 @@
-{{outlet}}
+<div class="jumbo">
+  <div class="right tomster"></div>
+    <h2>Lists</h2>
+    <p>This is where I will display my lists and their items!</p>
+</div>
