add board component and edit function for item and list

--- a/app/templates/components/create-item.hbs
+++ b/app/templates/components/create-item.hbs
@@ -1,6 +1,7 @@
-<div class="item-placeholder-text">
+<div class="new-item-text">
   {{input value=value
-        key-up=(action 'createNewItem')
+        key-press=(action 'createNewItem')
+        class="light"
         placeholder="New Item Title"}}
   {{yield results}}
 </div>
