--- a/app/templates/components/todo-list.hbs
+++ b/app/templates/components/todo-list.hbs
@@ -1,10 +1,19 @@
 <li class="list">
-  <h3>{{list.name}}</h3>
+  {{#if isEditingTitle}}
+    <form {{action 'toggleEditingTitle' on="submit"}}>
+      {{input type="text" placeholder=list.name value=list.name focus-out="toggleEditingTitle"}}
+      <button type="submit">Save</button>
+    </form>
+  {{else}}
+    <h3><button {{action "toggleEditingTitle"}}>{{list.name}}</button></h3>
+  {{/if}}
 
   <ul class="list-items">
     {{#each list.items as |item| }}
       {{todo-item item=item}}
     {{/each}}
-    <a class="add-card-link" href="#" {{action 'addNewItem'}}>Add New Item</a>
+    <li class="add-item">
+      <button class="add-item-button" {{action 'addNewItem'}}>Add New Item!</button>
+    </li>
   </ul>
 </li>
