--- a/app/templates/components/create-list.hbs
+++ b/app/templates/components/create-list.hbs
@@ -1,1 +1,5 @@
-{{yield}}
+<h3 class="list__title">{{list.title}}</h3>
+<a class="new-list__button" href="#" {{action 'createNewList'}}>
+  <i class='fa fa-plus'></i>
+ <span>Add New List!</span>
+</a>
