--- a/app/templates/components/board-show.hbs
+++ b/app/templates/components/board-show.hbs
@@ -1,6 +1,6 @@
 <ul class="lists">
   {{#each lists as |listItem|}}
-    {{todo-list list=listItem}}
+    {{todo-list list=listItem items=list.items}}
   {{/each}}
   <li class="create-list">
     <h3><button class="create-list-button" action={{addNewList}} lists={{lists}}>Create New List</button></h3>
