--- a/app/templates/components/create-list.hbs
+++ b/app/templates/components/create-list.hbs
@@ -1,4 +1,4 @@
-<h3 class="list__title">{{list.title}}</h3>
+<h3>{{list.title}}</h3>
 <a class="new-list__button" href="#" {{action 'createNewList'}}>
   <i class='fa fa-plus'></i>
  <span>Add New List!</span>
