--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,5 +2,5 @@
   <div class="right tomster"></div>
     <h2>Lists</h2>
     <p>This is where I will display my lists and their items!</p>
-    <div class='board'>{{board-show lists=model}}</div>
+    {{board-show lists=model}}
 </div>
