set up models for item and list, am able to create and edit items and lists successfully, updated index route as well

--- a/app/templates/components/board-show.hbs
+++ b/app/templates/components/board-show.hbs
@@ -2,7 +2,6 @@
   {{#each lists as |listItem|}}
     {{todo-list list=listItem items=list.items}}
   {{/each}}
-  <li class="create-list">
-    <h3><button class="create-list-button" action={{addNewList}} lists={{lists}}>Create New List</button></h3>
-  </li>
+
+  {{create-list onAdd=(action 'addNewList')}}
 </ul>
