--- a/app/templates/components/create-list.hbs
+++ b/app/templates/components/create-list.hbs
@@ -1,5 +1,3 @@
-<h3>{{list.title}}</h3>
-<a class="new-list__button" href="#" {{action 'createNewList'}}>
-  <i class='fa fa-plus'></i>
- <span>Add New List!</span>
-</a>
+<li class="create-list">
+  <h3><button class="create-list-button" {{action 'createList'}}>Create New List</button></h3>
+</li>
