--- a/app/templates/components/create-item.hbs
+++ b/app/templates/components/create-item.hbs
@@ -1,6 +1,6 @@
-<div class="new-item-text">
-  {{input value=value
-        key-press=(action 'createNewItem')
-        placeholder="New Item Title"}}
-  {{yield results}}
+<div>
+  <form {{action 'createItem' on="submit"}}>
+    {{input type="text" placeholder='Add Title' value=text focus-out="toggleAddingItem"}}
+    <button {{action 'createItem'}}>Add</button>
+  </form>
 </div>
