--- a/app/templates/components/todo-list.hbs
+++ b/app/templates/components/todo-list.hbs
@@ -1,28 +1,22 @@
 <li class="list">
   {{#if isEditingTitle}}
     <form {{action 'toggleEditingTitle' on="submit"}}>
-      {{input type="text" placeholder=list.title value=list.title focus-out="toggleEditingTitle"}}
+      {{input type="text" placeholder=list.name value=list.name focus-out="toggleEditingTitle"}}
       <button type="submit">Save</button>
     </form>
   {{else}}
-    <h3><button {{action "toggleEditingTitle"}}>{{list.title}}</button></h3>
+    <h3><button {{action "toggleEditingTitle"}}>{{list.name}}</button></h3>
   {{/if}}
 
   <ul class="list-items">
     {{#each list.items as |item| }}
       {{todo-item item=item}}
     {{/each}}
-
     <li class="add-item">
-      {{#if addingItem}}
-        <form {{action 'createNewItem' on="submit"}}>
-          {{input value=value
-            key-press=(action 'createNewItem')
-            placeholder="New Item Title"}}
-            <button type="submit">Add</button>
-        </form>
+      {{#if isAddingItem}}
+        {{create-item onAdd=(action 'addNewItem')}}
       {{else}}
-        <button class="add-item-button" {{action "toggleAddingItem"}}>Add New Item!</button>
+        <button class="create-item-button" {{action "toggleAddingItem"}}>Add New Item!</button>
       {{/if}}
     </li>
   </ul>
