set up modal-component, add my todo notes (notes.md), update a description in index route

--- a/app/templates/components/modal-component.hbs
+++ b/app/templates/components/modal-component.hbs
@@ -1,1 +1,21 @@
-{{yield}}
+{{#if modalOpen}}
+  <div class="modal fade">
+    <div class="modal-outer" {{action 'closeModal'}}></div>
+    <div class="modal-content">
+
+      <form class='modal-form' method='post'>
+        <label class='modal-form-title'>
+          <div>Title:</div>
+          {{input type="text" placeholder=item.title value=item.title}}
+        </label>
+        <label class='modal-form-description'>
+          <div>Description:</div>
+          {{input type="text" placeholder=item.description value=item.description rows=5}}
+        </label>
+        <button class="modal-submit-button" {{action "submitForm"}}>Save</button>
+      </form>
+      <button class="modal-delete-item" name="delete" {{action "openConfirm"}}>Delete</button>
+      <button type="button" class="close-modal" {{action 'closeModal'}}>close</button>
+    </div>
+  </div>
+{{/if}}
