--- a/app/templates/components/todo-item.hbs
+++ b/app/templates/components/todo-item.hbs
@@ -3,4 +3,4 @@
 </a>
 
 {{modal-component item=item list=list modalOpen=modalOpen
-  }}
+  onSubmit=(action 'itemSubmit') onConfirm=(action 'deleteItem')}}
