--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,3 @@
-<div class="jumbo">
-  <div class="right tomster"></div>
-    <h2>Lists</h2>
-    <p>This is where I will display my lists and their items!</p>
-    {{board-show lists=model}}
+<div class='board-wrapper'>
+  <div class='board'>{{board-show lists=model}}</div>
 </div>
