updated readme, the description in the index route, the add an item and add a list links

--- a/app/templates/components/todo-list.hbs
+++ b/app/templates/components/todo-list.hbs
@@ -19,7 +19,7 @@
         {{#if isAddingItem}}
           {{create-item onAdd=(action 'addNewItem')}}
         {{else}}
-          <a class="create-item" href="#" {{action "toggleAddingItem"}}>Add New Item!</a>
+          <a class="create-item" href="#" {{action "toggleAddingItem"}}>Add An Item</a>
         {{/if}}
       </li>
     </ul>
