confirmed that there was a consistency of quotes (changed to single quotes) in components, add the string to item and description in item model, and updated the css of the header

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,8 @@
-<div class="container">
-  <div class="header">
+<div class='container'>
+  <div class='header'>
     <h2>Karuna's Tiny Trello</h2>
   </div>
-  <div class="body">
+  <div class='body'>
     {{outlet}}
   </div>
 </div>
