--- a/app/templates/components/board-show.hbs
+++ b/app/templates/components/board-show.hbs
@@ -1,4 +1,4 @@
-<ul class="lists">
+<ul class='lists'>
   {{#each lists as |listItem|}}
     {{todo-list list=listItem items=list.items}}
   {{/each}}
