--- a/app/templates/components/create-list.hbs
+++ b/app/templates/components/create-list.hbs
@@ -1,3 +1,3 @@
-<li class="create-list">
-  <h3><button class="create-list-button" {{action 'createList'}}>Add A List</button></h3>
+<li class='create-list'>
+  <h3><button class='create-list-button' {{action 'createList'}}>Add A List</button></h3>
 </li>
