--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -30,7 +30,7 @@ body {
 
 .header {
   text-align: center;
-  background: #07E09A;
+  background: #41E33E;
   padding-top: 20px;
   padding-bottom: 20px;
   margin-bottom: 20px;
@@ -50,7 +50,7 @@ body {
 
 .list {
   padding: 50px;
-  background: #D5DFE3;
+  background: #D3F3B5;
   border-radius: 5px;
   width: 200px;
   box-shadow: 10px 10px 5px #888888;
